Added textarea for custom shape, changed background

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Separating Axis Theorem</title>
 </head>
-<body>
+<body style="background: #333;">
     <canvas id="canvas"></canvas>
+    <textarea id="custom" cols="10" rows="10" style="position: absolute; top: 0; right: 0;">100,900
+200,900
+200,1000
+100,1000</textarea>
 
     <!-- Separating Axis Theorem -->
     <script src="./js/Vector.js"></script>
