--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Separating Axis Theorem</title>
-</head>
-<body style="background: #333;">
-    <canvas id="canvas"></canvas>
-    <textarea id="custom" cols="10" rows="10" style="position: absolute; top: 0; right: 0;">100,900
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Separating Axis Theorem</title>
+    </head>
+    <body style="background: #333">
+        <canvas id="canvas"></canvas>
+        <textarea
+            id="custom"
+            cols="10"
+            rows="10"
+            style="position: absolute; top: 0; right: 0"
+        >
+100,900
 200,900
 200,1000
-100,1000</textarea>
+100,1000</textarea
+        >
 
-    <!-- Separating Axis Theorem -->
-    <script src="./js/Vector.js"></script>
-    <script src="./js/Digraph.js"></script>
+        <!-- Separating Axis Theorem -->
+        <script src="./js/Vector.js"></script>
+        <script src="./js/Digraph.js"></script>
 
-    <!-- Demo -->
-    <script src="./js/demo/script.js"></script>
-</body>
+        <!-- Demo -->
+        <script src="./js/demo/script.js"></script>
+    </body>
 </html>
